WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
15650
XML attribute nodes are not importable
https://bugs.webkit.org/show_bug.cgi?id=15650
Summary
XML attribute nodes are not importable
Kevin Decker
Reported
2007-10-23 17:30:18 PDT
XML attribute nodes are not importable; see attached test case. * STEPS TO REPRODUCE 1. Load attach test case in Safari 3. * RESULTS The following exception appears in the JavaScript Console: "NOT_SUPPORTED_ERR: DOM Exception 9" Firefox does not throw the exception.
Attachments
test case
(1.40 KB, text/html)
2007-10-23 17:30 PDT
,
Kevin Decker
no flags
Details
proposed fix
(8.82 KB, patch)
2007-10-25 09:37 PDT
,
Alexey Proskuryakov
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Kevin Decker
Comment 1
2007-10-23 17:30:55 PDT
Created
attachment 16822
[details]
test case
Alexey Proskuryakov
Comment 2
2007-10-25 09:37:28 PDT
Created
attachment 16858
[details]
proposed fix
Darin Adler
Comment 3
2007-10-25 10:23:37 PDT
Comment on
attachment 16858
[details]
proposed fix Looks great, r=me.
Alexey Proskuryakov
Comment 4
2007-10-25 11:42:28 PDT
Committed revision 27052.
Lucas Forschler
Comment 5
2019-02-06 09:03:32 PST
Mass moving XML DOM bugs to the "DOM" Component.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug