        Reviewed by Darin.

http://bugs.webkit.org/show_bug.cgi?id=15650
        XML attribute nodes are not importable

        Tests: fast/dom/import-attribute-node.html
               fast/dom/import-document-fragment.html

        * dom/Document.cpp:
        (WebCore::Document::importNode): Implemented for Attribute and DocumentFragment nodes.



Canonical link: https://commits.webkit.org/20977@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@27052 268f45cc-cd09-0410-ab3c-d52691b4dbfc